refactor(index): add Material Design icons

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,14 @@
   <meta name="robots" content="index, follow, archive">
 
   <!-- Links -->
+  <!-- Material icons -->
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+  <!-- Material Design icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
   <!-- Favicons -->
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
