refactor(index): add comments

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,10 @@
   <meta name="robots" content="index, follow, archive">
 
   <!-- Links -->
-  <!-- Material icons -->
+  <!-- Font: Source code Pro  -->
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+  
+  <!-- Material icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
   <!-- Material Design icons -->
