--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,17 @@
   <link rel="icon" type="image/png" sizes="192x192" href="/favicons/android-chrome-192x192.png">
   <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#ff4242">
 
+  <!-- Open Graph optimization / Facebook -->
+  <meta property="og:title"         content="<%= VUE_APP_INDEX_OG_TITLE %>">
+  <meta property="og:description"   content="<%= VUE_APP_INDEX_OG_DESCRIPTION %>">
+  <meta property="og:type"          content="<%= VUE_APP_INDEX_OG_TYPE %>">
+  <meta property="og:image"         content="<%= VUE_APP_INDEX_OG_IMAGE %>">
+  <meta property="og:image:width"   content="<%= VUE_APP_INDEX_OG_IMAGE_WIDTH %>">
+  <meta property="og:image:height"  content="<%= VUE_APP_INDEX_OG_IMAGE_HEIGHT %>">
+  <meta property="og:image:alt"     content="<%= VUE_APP_INDEX_OG_IMAGE_ALT %>">
+  <meta property="og:url"           content="<%= VUE_APP_INDEX_OG_URL %>">
+  <meta property="og:site_name"     content="<%= VUE_APP_INDEX_OG_SITE_NAME %>">
+
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
