--- a/public/sitemap.html
+++ b/public/sitemap.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="content-Type" content="text/html; utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="content-language" content="en">
 
   <!-- Apple-Specific Meta Tag Keys -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,12 +18,13 @@
   <meta name="author" content="Re-Krass">
   <meta name="publisher" content="Re-Krass">
   <meta name="copyright" content="Re-Krass">
-  <meta name="description" content="Re-Krass Homepage.">
-  <meta name="keywords" content="Re-Krass, Re-Krass homepage">
+  <meta name="description" content="Re-Krass Homepage | Sitemap">
+  <meta name="keywords" content="Re-Krass, Re-Krass homepage, sitemap">
   <meta name="page-topic" content="Dienstleistung">
   <meta name="page-type" content="Private Homepage">
   <meta name="audience" content="Alle">
-  <meta http-equiv="content-language" content="en">
+
+  <!-- Robots tags -->
   <meta name="robots" content="index, follow, archive">
 
   <!-- Links -->
@@ -30,7 +32,39 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
   <!-- Favicons -->
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="shortcut icon" href="favicon.ico">
+
+  <meta name="application-name" content="Re-Krass">
+  <meta name="apple-mobile-web-app-title" content="Re-Krass">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+  <meta name="theme-color" content="#ffffff">
+  <meta name="msapplication-config" content="/browserconfig.xml">
+  <meta name="msapplication-TileColor" content="#c84823">
+  <meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png">
+
+  <link rel="mask-icon" color="#ff4242" href="/favicons/safari-pinned-tab.svg">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/favicons/android-chrome-192x192.png">
+
+  <!-- Open Graph optimization / Facebook -->
+  <meta property="og:title" content="<%= VUE_APP_INDEX_OG_TITLE %>">
+  <meta property="og:description" content="<%= VUE_APP_INDEX_OG_DESCRIPTION %>">
+  <meta property="og:type" content="<%= VUE_APP_INDEX_OG_TYPE %>">
+  <meta property="og:image" content="<%= VUE_APP_INDEX_OG_IMAGE %>">
+  <meta property="og:image:width" content="<%= VUE_APP_INDEX_OG_IMAGE_WIDTH %>">
+  <meta property="og:image:height" content="<%= VUE_APP_INDEX_OG_IMAGE_HEIGHT %>">
+  <meta property="og:image:alt" content="<%= VUE_APP_INDEX_OG_IMAGE_ALT %>">
+  <meta property="og:url" content="<%= VUE_APP_INDEX_OG_URL %>">
+  <meta property="og:site_name" content="<%= VUE_APP_INDEX_OG_SITE_NAME %>">
+
+  <!-- Open Graph optimization / Twitter -->
+  <meta property="twitter:card" content="<%= VUE_APP_INDEX_TWITTER_CARD %>">
+  <meta name="twitter:image:alt" content="<%= VUE_APP_INDEX_TWITTER_IMAGE_ALT %>">
+
 
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -148,18 +182,35 @@
       <div id="contentText">
 
         <h3>
-          <span>Last updated: 2019, April 27</span>
+          <span>Last updated: 31.12.2019 </span>
           <br>
-          <span>Total pages: 1</span>
+          <span>Total pages: 3</span>
+          <br>
           <br>
           <a href="http://re-krass.github.io">re-krass.github.io Homepage</a>
         </h3>
 
         <ul>
           <li>https://</li>
-          <li>
-            <ul>re-krass.github.io</ul>
-          </li>
+          <ul>
+            <li>
+              <a href="https://re-krass.github.io/">re-krass.github.io/</a>
+            </li>
+            <!-- #/impressum -->
+            <ul>
+              <li>
+                <a href="https://re-krass.github.io/#/">#/</a>
+              </li>
+              <ul>
+                <li>
+                  <a href="https://re-krass.github.io/#/datenschutzerklaerung">datenschutzerklärung</a>
+                </li>
+                <li>
+                  <a href="https://re-krass.github.io/#/impressum">impressum</a>
+                </li>
+              </ul>
+            </ul>
+          </ul>
         </ul>
       </div>
     </div>
