--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,29 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="content-Type" content="text/html; utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="content-Type"     content="text/html; utf-8" />
+  <meta http-equiv="X-UA-Compatible"  content="IE=edge">
+  <meta http-equiv="content-language" content="en">
 
   <!-- Apple-Specific Meta Tag Keys -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="viewport"                               content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-status-bar-style"  content="black">
+  <meta name="apple-mobile-web-app-capable"           content="yes" />
 
   <title>Re-Krass Homepage</title>
 
   <!-- Meta Tags -->
-  <meta name="author" content="Re-Krass">
-  <meta name="publisher" content="Re-Krass">
-  <meta name="copyright" content="Re-Krass">
-  <meta name="description" content="Re-Krass Homepage.">
-  <meta name="keywords" content="Re-Krass, Re-Krass homepage">
-  <meta name="page-topic" content="Dienstleistung">
-  <meta name="page-type" content="Private Homepage">
-  <meta name="audience" content="Alle">
-  <meta http-equiv="content-language" content="en">
-  <meta name="robots" content="index, follow, archive">
+  <meta name="author"       content="Re-Krass">
+  <meta name="publisher"    content="Re-Krass">
+  <meta name="copyright"    content="Re-Krass">
+  <meta name="description"  content="Re-Krass Homepage.">
+  <meta name="keywords"     content="Re-Krass, Re-Krass homepage">
+  <meta name="page-topic"   content="Dienstleistung">
+  <meta name="page-type"    content="Private Homepage">
+  <meta name="audience"     content="Alle">
+
+  <!-- Robots tags -->
+  <meta name="robots"       content="index, follow, archive">
 
   <!-- Links -->
   <!-- Font: Source code Pro  -->
@@ -38,20 +40,23 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
   <!-- Favicons -->
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="icon"          href="<%= BASE_URL %>favicon.ico">
   <link rel="shortcut icon" href="favicon.ico">
-  <meta name="application-name" content="Re-Krass">
+
+  <meta name="application-name"           content="Re-Krass">
   <meta name="apple-mobile-web-app-title" content="Re-Krass">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <meta name="msapplication-config" content="/browserconfig.xml">
-  <meta name="theme-color" content="#ffffff">
-  <meta name="msapplication-TileColor" content="#c84823">
-  <meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/favicons/android-chrome-192x192.png">
-  <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#ff4242">
+  <link rel="manifest"      href="/site.webmanifest">
+
+  <meta name="theme-color"              content="#ffffff">
+  <meta name="msapplication-config"     content="/browserconfig.xml">
+  <meta name="msapplication-TileColor"  content="#c84823">
+  <meta name="msapplication-TileImage"  content="/favicons/mstile-144x144.png">
+
+  <link rel="mask-icon"                 color="#ff4242" href="/favicons/safari-pinned-tab.svg" >
+  <link rel="icon" type="image/png"     sizes="16x16"   href="/favicons/favicon-16x16.png">
+  <link rel="icon" type="image/png"     sizes="32x32"   href="/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png"     sizes="192x192" href="/favicons/android-chrome-192x192.png">
 
   <!-- Open Graph optimization / Facebook -->
   <meta property="og:title"         content="<%= VUE_APP_INDEX_OG_TITLE %>">
@@ -63,6 +68,10 @@
   <meta property="og:image:alt"     content="<%= VUE_APP_INDEX_OG_IMAGE_ALT %>">
   <meta property="og:url"           content="<%= VUE_APP_INDEX_OG_URL %>">
   <meta property="og:site_name"     content="<%= VUE_APP_INDEX_OG_SITE_NAME %>">
+
+  <!-- Open Graph optimization / Twitter -->
+  <meta property="twitter:card"   content="<%= VUE_APP_INDEX_TWITTER_CARD %>">
+  <meta name="twitter:image:alt"  content="<%= VUE_APP_INDEX_TWITTER_IMAGE_ALT %>">
 
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
